# TiebaScraper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.docker.example.toml  config.example.toml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docker/postgres/: Dockerfile
examples/: consumer.py  consumer_ws.py  dashboard.json  deserialization.py  prometheus.yml
src/: __init__.py  config.py
src/core/: __init__.py  client.py  config.py  container.py  datastore.py  initialize.py  lock.py  metrics.py  models.py  monitor.py  publisher.py  ws_server.py
src/models/: __init__.py  models.py
src/schemas/: __init__.py  fragments.py
src/scraper/: __init__.py  queue.py  router.py  scheduler.py  tasks.py  worker.py
src/utils/: __init__.py  logging.py  serialization.py
tests/: conftest.py  test_core_models.py  test_datastore_core.py  test_lock.py  test_main_recover_pending.py  test_models_conversion.py  test_monitor.py  test_publisher.py  test_router.py  test_scheduler_and_tasks.py  test_utils_serialization.py  test_websocket_publisher.py  test_worker_handlers.py
tests/integration/: test_pg_redis_integration.py
