[project]
name = "tiebascraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1,<2",
    "aiotieba>=4.6.0,<5",
    "asyncpg>=0.30.0,<1",
    "cashews[redis]>=7.4.1,<8",
    "pydantic>=2.11.7,<3",
    "redis[hiredis]>=6.2.0,<7",
    "sqlalchemy[asyncio]>=2.0.42,<3",
    "tenacity>=9.1.2,<10",
]

[project.optional-dependencies]
speedup = [
  "uvloop>=0.18.0,<1.0;python_version=='3.12' and sys_platform!='win32'",
  "uvloop>=0.21.0,<1.0;python_version>='3.13' and sys_platform!='win32'",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
