[project]
name = "tiebascraper"
version = "0.1.0"
description = "A high-performance, extensible scraper for Baidu Tieba"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "aiolimiter>=1.2.1,<2",
    "aiotieba[speedup]>=4.6.1,<5",
    "asyncpg>=0.30.0,<1",
    "cashews[redis]>=7.4.1,<8",
    "pydantic>=2.11.7,<3",
    "redis[hiredis]>=6.2.0,<7",
    "sqlalchemy[asyncio]>=2.0.42,<3",
    "tenacity>=9.1.2,<10",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.2",
]
