[project]
name = "tiebascraper"
version = "0.1.0"
description = "A high-performance, extensible scraper for Baidu Tieba"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "aiohttp-socks>=0.11.0",
    "aiolimiter>=1.2.1",
    "aiotieba[speedup]>=4.6.1",
    "asyncpg>=0.31.0",
    "cashews[redis]>=7.4.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis[hiredis]>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "tenacity>=9.1.2",
    "tiebameow[orm]>=0.3.0,<0.4.0",
    "tomlkit>=0.14.0",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
